# predictFirstDownsDSDM

./: README.md  first_down_model.pkl  pyproject.toml
app/: main.py
docs/: api.html  documentation.html  footer.html  header.html  index.html  playground.html
docs/pages/: documentation.md  test.md
notebooks/: preprocessing_test.ipynb  test.ipynb
src/: model_pickle_generator.py
src/firstDown/: __init__.py
src/firstDown.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/firstDown/feature_engineering/: __init__.py  build_features.py  encode.py
src/firstDown/hyper_tuning/: __init__.py  random_search.py
src/firstDown/load_data/: __init__.py  datasets.py
src/firstDown/metrics/: __init__.py  model_metrics.py
src/firstDown/preprocessing/: __init__.py  clean.py  deal_nan.py  scale.py  split.py
src/firstDown/train/: __init__.py  models.py
src/firstDown/unit_tests/: test_build_features.py  test_clean.py  test_deal_nan.py  test_encode.py  test_scale.py  test_split.py
src/predictfirstdownsdsdm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
