[project]
name = "firstDown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "category-encoders>=2.9.0",
    "lightgbm>=4.6.0",
    "nflreadpy>=0.1.5",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.2",
]
